# baml-kuzu-demo

./: .gitignore  README.md  image_extractor.py  notes_extractor.py  pyproject.toml
baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
baml_src/: clients.baml  medicines.baml  notes.baml
chroma_db/: chroma.sqlite3
data/extracted_data/: Medication_Side_Effect_Flyer.md  drugs_2.json  notes.json
data/human_annotated_data/: drugs_1.json  drugs_2.json
data/text/: notes_1.txt
src/: 01_create_drug_graph.py  02_create_patient_graph.py  README.md  docker-compose.yml  image_extractor.py  notes_extractor.py  pdf_extractor.py  rag_debug.py  run_graph_rag.py  run_graphrag.py  semantic_rag.py  streamlit_app.py
src/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
src/baml_src/: clients.baml  drugs.baml  generators.baml  graph_rag.baml  graphrag.baml  image_extractor.baml  notes.baml  notes_extractor.baml  simplerag.baml
src/chroma_db/: chroma.sqlite3
src/evals/: image_extractor_eval.py  notes_extractor_eval.py
